# rust-async-examples

./: Cargo.toml  LICENSE  README.md
examples/: 01-pages-hello-ok.rs  02-pages-stream-1-fail.rs  03-pages-stream-2-fail.rs  04-pages-stream-3-fail.rs  05-pages-stream-4-ok.rs  06-pages-stream-5-fail.rs  07-pages-stream-6-fail.rs  08-pages-stream-7-ok.rs  09-pages-buffered-1-fail.rs  10-pages-buffered-2-ok.rs  11-pages-take-then-buffered-ok.rs  12-pages-buffer_unordered-then-take-ok.rs  13-pages-take-then-buffer_unordered-ok.rs  14-pages-ids-ok.rs  15-pages-ids-n-items-ok.rs  16-pages-resources-ok.rs  17-pages-resources-expanded-ok.rs  18-pages-resources-map-insteadof-then-fail.rs  19-pages-resources-map-insteadof-then-expanded-fail.rs  20-pages-resources-then-insteadof-map-fail.rs  21-pages-resources-then-insteadof-map-expanded-fail.rs  22-ui-hello-1-fail.rs  23-ui-hello-2-ok.rs  24-ui-get_data-ok.rs  25-ui-buffered-1-fail.rs  26-ui-buffered-2-ok.rs  27-ui-no-cancel-1-ok.rs  28-ui-no-cancel-2-fail.rs  29-ui-cancel-buffered-1-fail.rs  30-ui-cancel-buffered-2-ok.rs  31-ui-cancel-buffer_unordered-ok.rs  32-ui-cancel-buffered-3-fail.rs  33-ui-cancel-combinator-1-fail.rs  34-ui-cancel-combinator-2-fail.rs  35-ui-cancel-combinator-3-fail.rs  36-ui-cancel-combinator-4-ok.rs  37-ui-cancel-buffered-4-ok.rs  plot.rs
